# patent-file

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Makefile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: frontend.yml  rust.yml
apps/web/: package-lock.json  package.json
apps/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx
apps/web/app/account/: page.tsx
apps/web/app/fer/: page.tsx
apps/web/app/fer/[id]/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/patents/search/: page.tsx
apps/web/app/projects/: error.tsx  loading.tsx  page.tsx
apps/web/app/projects/[id]/: page.tsx
apps/web/app/projects/[id]/export/: page.tsx
apps/web/app/projects/new/: page.tsx
apps/web/app/search/: page.tsx
apps/web/app/search/[id]/: page.tsx
apps/web/app/subscribe/: page.tsx
apps/web/components/editor/: generation-stream.tsx  section-card.tsx  section-list.tsx
apps/web/components/fer/: fer-upload-form.tsx  objection-card.tsx
apps/web/components/interview/: interview-wizard.tsx  step-applicant.tsx  step-basics.tsx  step-description.tsx  step-figures.tsx  step-novelty.tsx  step-problem.tsx  step-review.tsx
apps/web/components/layout/: auth-guard.tsx  navbar.tsx  subscription-guard.tsx
apps/web/components/projects/: project-card.tsx
apps/web/components/search/: result-card.tsx  search-form.tsx
apps/web/hooks/: use-auth.ts  use-auto-save.ts  use-interview-wizard.ts  use-sse-stream.ts
apps/web/lib/: api-client.ts
apps/web/test/: setup.ts
apps/web/test/mocks/: handlers.ts
backend/: Cargo.toml
backend/ai/: Cargo.toml
backend/ai/src/: anthropic.rs  lib.rs  mock.rs  pipeline.rs  prompts.rs  provider.rs
backend/ai/src/compliance/: case_law.rs  claims.rs  mod.rs  section10.rs  section3.rs
backend/api/: Cargo.toml
backend/api/src/: error.rs  main.rs
backend/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  role.rs  subscription.rs
backend/api/src/routes/: admin.rs  applicants.rs  auth.rs  compliance.rs  deadlines.rs  export.rs  fer.rs  figures.rs  generate.rs  interview.rs  me.rs  mod.rs  oauth.rs  patent_search.rs  projects.rs  search.rs  sections.rs  subscriptions.rs  webhooks.rs
backend/export/: Cargo.toml
backend/export/src/: lib.rs  pdf.rs  typst_source.rs
backend/fer/: Cargo.toml
backend/fer/src/: lib.rs  models.rs  parser.rs  pipeline.rs  prompts.rs
backend/search/: Cargo.toml
backend/search/src/: engine.rs  google_patents.rs  inpass.rs  lib.rs  models.rs  novelty.rs  npl.rs  report.rs
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  db.rs  models.rs
backend/storage/: Cargo.toml
backend/storage/src/: lib.rs
docs/superpowers/plans/: 2026-03-18-patent-draft-pro-mvp.md
docs/superpowers/specs/: 2026-03-18-patent-draft-pro-mvp-design.md
e2e/: auth.spec.ts  editor.spec.ts  export.spec.ts  interview.spec.ts  playwright.config.ts  projects.spec.ts  subscription.spec.ts
e2e/fixtures/: test-setup.ts
migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_projects.sql  004_create_project_applicants.sql  005_create_interview_responses.sql  006_create_patent_sections.sql  007_create_section_versions.sql  008_create_figures.sql  009_create_exports.sql  010_create_subscriptions.sql  011_create_rate_limits.sql  012_create_patent_search_cache.sql  013_create_deadlines.sql  013_create_fer_analyses.sql  014_add_oauth_providers.sql  015_add_user_roles.sql  016_create_compliance_checks.sql  017_create_prior_art_searches.sql
