[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tracing.workspace = true
uuid.workspace = true
