[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
storage = { path = "../storage" }
axum = "0.8"
http = "1"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace"] }
jsonwebtoken = "9"
argon2 = "0.5"
chrono.workspace = true
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
axum-extra = { version = "0.10", features = ["cookie"] }
